--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 base64 = "0.22.1"
 clap = { version = "4.5.57", features = ["derive"] }
+itertools = "0.14.0"
 pretty_assertions = "1.4.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
