--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ itertools = "0.14.0"
 pretty_assertions = "1.4.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+strum_macros = "0.28.0"
